request response headers

--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -375,7 +375,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                     <?php endif; ?>
 
                     <?php if(!empty($parameters)): ?>
-                        <h3 class="margin-bottom margin-top-small margin-start-small">Request</h3>
+                        <h3 class="margin-bottom margin-top-small margin-start-small">HTTP Request</h3>
                         <table class="vertical full args">
                             <thead>
                             <tr>
@@ -412,7 +412,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                     <?php endif; ?>
 
                     <?php if (!empty($responses)): ?>
-                        <h3 class="margin-bottom margin-top-large margin-start-small">Response</h3>
+                        <h3 class="margin-bottom margin-top-large margin-start-small">HTTP Response</h3>
 
                         <table class="vertical full args">
                             <thead>
