--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -93,6 +93,12 @@
             <td data-title="Description: ">The Appwrite servers are up, but the request couldn’t be serviced due to some failure within the stack. Try again later.</td>
         </tr>
 
+        <tr>
+            <td data-title="Code: ">516</td>
+            <td data-title="Text: ">Invalid Range</td>
+            <td data-title="Description: ">Usually returned while uploading or download files using range header but the provided range value is not valid.</td>
+        </tr>
+
     </tbody>
 </table>
 
