--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -64,6 +64,12 @@
         </tr>
 
         <tr>
+            <td data-title="Code: ">416</td>
+            <td data-title="Text: ">Invalid Range</td>
+            <td data-title="Description: ">Invalid value in the range or content-range headers. Usually returned while uploading or downloading files using range header but the provided range value is not valid.</td>
+        </tr>
+
+        <tr>
             <td data-title="Code: ">429</td>
             <td data-title="Text: ">Too Many Requests</td>
             <td data-title="Description: ">Returned in when a request cannot be served due to the application’s rate limit having been exhausted for the resource. <a href="/docs/rate-limits">See Rate Limits</a></td>
@@ -91,12 +97,6 @@
             <td data-title="Code: ">504</td>
             <td data-title="Text: ">Gateway timeout</td>
             <td data-title="Description: ">The Appwrite servers are up, but the request couldn’t be serviced due to some failure within the stack. Try again later.</td>
-        </tr>
-
-        <tr>
-            <td data-title="Code: ">516</td>
-            <td data-title="Text: ">Invalid Range</td>
-            <td data-title="Description: ">Usually returned while uploading or download files using range header but the provided range value is not valid.</td>
         </tr>
 
     </tbody>
